# naudio

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md  naudio.pc.in
.github/workflows/: ci.yml
cmake/: naudioConfig.cmake.in
conformance/: README.md
conformance/tools/: gen_vectors.py
conformance/vectors/: vectors.ini
docs/: audio-streaming-protocol-v1.md  protocols.md
docs/spec/: audio-streaming-protocol-v1.md
examples/: CMakeLists.txt  README.md
examples/c/: README.md  play_to_speakers.c
examples/cpp/: README.md  play_to_speakers.cpp
examples/java/: PlayToSpeakers.java  README.md
examples/python/: README.md  play_to_speakers.py
examples/rust/: Cargo.toml  README.md  build.rs
examples/rust/src/: main.rs
examples/server/: README.md  audio_source.c
include/: naudio.h
include/naudio/: AudioPacket.hpp  AudioRingBuffer.hpp  AudioStreamConfig.hpp  ByteCursor.hpp  ControlMessage.hpp  ControlReliability.hpp  Crc32.hpp  DeviceBackend.hpp  DeviceEnumerator.hpp  FakeBackend.hpp  FecDecoder.hpp  FecEncoder.hpp  FormatProbe.hpp  JitterEstimator.hpp  PacketReorderBuffer.hpp  Platform.hpp  PortAudioBackend.hpp  PulseCommands.hpp  ShellRunner.hpp  Stream.hpp  StreamDescription.hpp  StreamOpener.hpp  StringUtil.hpp  TransportType.hpp  Types.hpp  VirtualAudioGuide.hpp  export.h
include/naudio/net/: AudioBroadcaster.hpp  AudioMixer.hpp  AudioProtocolHandler.hpp  AudioStreamClient.hpp  AudioStreamServer.hpp  CallbackDispatcher.hpp  ClientAddress.hpp  DualServerTransport.hpp  Socket.hpp  TcpClientConnection.hpp  TcpClientTransport.hpp  TcpServerTransport.hpp  Transport.hpp  UdpClientConnection.hpp  UdpClientTransport.hpp  UdpServerTransport.hpp
src/: AudioPacket.cpp  AudioRingBuffer.cpp  ControlMessage.cpp  ControlReliability.cpp  Crc32.cpp  DeviceEnumerator.cpp  FecDecoder.cpp  FecEncoder.cpp  FormatProbe.cpp  JitterEstimator.cpp  PacketReorderBuffer.cpp  Platform.cpp  PlatformConfigurator.cpp  PortAudioBackend.cpp  ShellRunner.cpp  StreamOpener.cpp  VirtualAudioGuide.cpp  naudio_c_api.cpp
src/net/: AudioBroadcaster.cpp  AudioMixer.cpp  AudioProtocolHandler.cpp  AudioStreamClient.cpp  AudioStreamServer.cpp  Socket.cpp  TcpServerTransport.cpp  UdpClientConnection.cpp  UdpServerTransport.cpp
tests/: CMakeLists.txt  c_abi_fault.cpp  c_abi_smoke.c  c_net_smoke.c  c_server_smoke.c  net_smoke_server.cpp  test_audio_packet.cpp  test_codec_primitives.cpp  test_control_message.cpp  test_control_reliability.cpp  test_device_enumerator.cpp  test_fec.cpp  test_format_probe.cpp  test_guide.cpp  test_jitter.cpp  test_protocol_types.cpp  test_reorder.cpp  test_ring_buffer.cpp  test_streams.cpp  test_types.cpp
tests/conformance/: ConformanceTest.cpp
tests/external-consumer/: CMakeLists.txt  README.md  consume_c.c  consume_cxx.cpp  run.sh
tests/net/: test_broadcaster.cpp  test_client_e2e.cpp  test_dual_transport.cpp  test_mixer.cpp  test_protocol_handler.cpp  test_server.cpp  test_socket.cpp  test_tcp_transport.cpp  test_transport_types.cpp  test_udp_connection.cpp  test_udp_transport.cpp
tests/readme-snippets/: check.sh
tools/: CMakeLists.txt  na_audio_daemon.cpp
